@@ -1,3 +1,8 @@
+2005-07-12  Derek Price  <derek@ximbiot.com>
+
+	* client.c: Update fwrite usage to use size & count in the standard
+	order.
+
 2005-07-11  Derek Price  <derek@ximbiot.com>
 
 	* buffer.c, buffer.h, client.h, expand_path.c, history.c, myndbm.h,
